# markitdown-web

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
public/: script.js  style.css
static/: script.js  style.css
templates/: index.html
