[project]
name = "markitdown-web"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "python-multipart>=0.0.12",
  "jinja2>=3.1.4",
  "markitdown==0.1.5",
  "beautifulsoup4",
  "charset-normalizer",
  "defusedxml",
  "markdownify",
  "requests",
  "pdfminer.six",
  "mammoth",
  "openpyxl",
  "lxml",
]
